# Games_Engineering

./: CMakeLists.txt  README.md
lib_maths/: maths.h
lib_tile_level_loader/: levelsystem.cpp  levelsystem.h
practical_1/: main.cpp
practical_2/: Ship.cpp  Ship.h  bullet.cpp  bullet.h  game.h  main.cpp
practical_3/: Entity.cpp  Entity.h  Player.cpp  Player.h  main.cpp
practical_4/: Entity.cpp  Entity.h  Ghost.cpp  Ghost.h  Player.cpp  Player.h  main.cpp  pacman.cpp  pacman.h  scene.cpp  scene.h  system_renderer.cpp  system_renderer.h
